--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -25,7 +25,7 @@
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>40</y>
+      <y>80</y>
       <width>111</width>
       <height>41</height>
      </rect>
@@ -75,7 +75,7 @@ QPushButton::pressed
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>90</y>
+      <y>150</y>
       <width>111</width>
       <height>41</height>
      </rect>
@@ -125,7 +125,7 @@ QPushButton::pressed
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>140</y>
+      <y>220</y>
       <width>111</width>
       <height>41</height>
      </rect>
@@ -230,8 +230,98 @@ QPushButton::pressed
       <height>271</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">QTabWidget::pane {
+    border: 1px solid black;
+    background: rgb(255, 90, 129);
+}
+
+QTabWidget::tab-bar:top {
+    top: 1px;
+}
+
+QTabWidget::tab-bar:bottom {
+    bottom: 1px;
+}
+
+QTabWidget::tab-bar:left {
+    right: 1px;
+}
+
+QTabWidget::tab-bar:right {
+    left: 1px;
+}
+
+QTabBar::tab {
+    border: 1px solid black;
+	color: white;
+	font: 13px, &quot;Lucida Grande&quot;;
+}
+
+QTabBar::tab:selected {
+    background: rgb(255, 88, 164);
+}
+
+QTabBar::tab:!selected {
+    background: rgb(255, 158, 200);
+}
+
+QTabBar::tab:!selected:hover {
+    background: rgb(255, 165, 200);
+}
+
+QTabBar::tab:top:!selected {
+    margin-top: 3px;
+}
+
+QTabBar::tab:bottom:!selected {
+    margin-bottom: 3px;
+}
+
+QTabBar::tab:top, QTabBar::tab:bottom {
+    min-width: 8ex;
+    margin-right: -1px;
+    padding: 5px 10px 5px 10px;
+}
+
+QTabBar::tab:bottom:selected {
+    border-top-color: none;
+}
+
+QTabBar::tab:top:last, QTabBar::tab:bottom:last,
+QTabBar::tab:top:only-one, QTabBar::tab:bottom:only-one {
+    margin-right: 0;
+}
+
+QTabBar::tab:left:!selected {
+    margin-right: 3px;
+}
+
+QTabBar::tab:right:!selected {
+    margin-left: 3px;
+}
+
+QTabBar::tab:left, QTabBar::tab:right {
+    min-height: 8ex;
+    margin-bottom: -1px;
+    padding: 10px 5px 10px 5px;
+}
+
+QTabBar::tab:left:selected {
+    border-left-color: none;
+}
+
+QTabBar::tab:right:selected {
+    border-right-color: none;
+}
+
+QTabBar::tab:left:last, QTabBar::tab:right:last,
+QTabBar::tab:left:only-one, QTabBar::tab:right:only-one {
+    margin-bottom: 0;
+}</string>
+    </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>2</number>
     </property>
     <widget class="QWidget" name="Tops">
      <attribute name="title">
@@ -240,9 +330,9 @@ QPushButton::pressed
      <widget class="QScrollArea" name="topsScrollArea">
       <property name="geometry">
        <rect>
-        <x>-1</x>
-        <y>-1</y>
-        <width>461</width>
+        <x>0</x>
+        <y>0</y>
+        <width>471</width>
         <height>241</height>
        </rect>
       </property>
@@ -254,7 +344,7 @@ QPushButton::pressed
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>459</width>
+         <width>469</width>
          <height>239</height>
         </rect>
        </property>
@@ -273,7 +363,7 @@ QPushButton::pressed
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>461</width>
+        <width>471</width>
         <height>241</height>
        </rect>
       </property>
@@ -288,7 +378,7 @@ QPushButton::pressed
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>459</width>
+         <width>469</width>
          <height>239</height>
         </rect>
        </property>
@@ -304,7 +394,7 @@ QPushButton::pressed
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>461</width>
+        <width>471</width>
         <height>241</height>
        </rect>
       </property>
@@ -316,7 +406,7 @@ QPushButton::pressed
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>459</width>
+         <width>469</width>
          <height>239</height>
         </rect>
        </property>
