--- a/outfits.ui
+++ b/outfits.ui
@@ -20,7 +20,7 @@
    <property name="geometry">
     <rect>
      <x>440</x>
-     <y>410</y>
+     <y>380</y>
      <width>100</width>
      <height>32</height>
     </rect>
@@ -39,7 +39,7 @@ border: 0px</string>
    <property name="geometry">
     <rect>
      <x>120</x>
-     <y>370</y>
+     <y>380</y>
      <width>100</width>
      <height>32</height>
     </rect>
@@ -58,7 +58,7 @@ border: 0px</string>
    <property name="geometry">
     <rect>
      <x>120</x>
-     <y>110</y>
+     <y>120</y>
      <width>100</width>
      <height>32</height>
     </rect>
@@ -76,7 +76,7 @@ border: 0px</string>
   <widget class="QPushButton" name="rightTops">
    <property name="geometry">
     <rect>
-     <x>450</x>
+     <x>440</x>
      <y>120</y>
      <width>100</width>
      <height>32</height>
@@ -95,7 +95,7 @@ border: 0px</string>
   <widget class="QPushButton" name="leftShoes">
    <property name="geometry">
     <rect>
-     <x>110</x>
+     <x>120</x>
      <y>590</y>
      <width>100</width>
      <height>32</height>
@@ -114,7 +114,7 @@ border: 0px</string>
   <widget class="QPushButton" name="rightShoes">
    <property name="geometry">
     <rect>
-     <x>410</x>
+     <x>440</x>
      <y>590</y>
      <width>100</width>
      <height>32</height>
@@ -140,7 +140,7 @@ border: 0px</string>
     </rect>
    </property>
    <property name="text">
-    <string>TextLabel</string>
+    <string/>
    </property>
   </widget>
   <widget class="QLabel" name="bottomsVIew">
@@ -153,7 +153,7 @@ border: 0px</string>
     </rect>
    </property>
    <property name="text">
-    <string>TextLabel</string>
+    <string/>
    </property>
   </widget>
   <widget class="QLabel" name="shoesView">
@@ -166,7 +166,7 @@ border: 0px</string>
     </rect>
    </property>
    <property name="text">
-    <string>TextLabel</string>
+    <string/>
    </property>
   </widget>
  </widget>
