--- a/selectionwindow.ui
+++ b/selectionwindow.ui
@@ -14,9 +14,7 @@
    <string>Dialog</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: rgb(239, 159, 183)
-
-</string>
+   <string notr="true">background-color: rgb(255, 206, 222)</string>
   </property>
  </widget>
  <resources/>
